エディットボックスのサイズを大きくした

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>URL変換君</title>
 </head>
 <body>
   <h1>URL変換君</h1>
 
   <div>
-    <input type="text" id="urlEdit"/>
+    <input type="text" id="urlEdit" maxlength="1000" size="80" />
     <button id="exchange">変換</button>
   </div>
 
