--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <div>
     <input type="text" id="urlEdit" maxlength="1000" size="80" />
-    <button id="exchange">変換</button>
+    <button id="exchange">変換</button><br>
+    <label for="check"><input type="checkbox" id="check">確認</label>
+    
   </div>
 
   <script src="exchange.js"></script>
